--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
+
+<head>
+  <meta charset="utf-8">
+  <title>this is a webpage.</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Hier werden die Styles geladen -->
+   <link rel="stylesheet" href="index.css">
+</head>
+
 <body>
-<h1>Hello World</h1>
+
+    <h2>> Willkommen</h2>
+
+<!-- <h4>  <i>Auf dieser Seite teile ich meine Projekte.</i>  </h4> -->
+
+<div class="topnav">
+  <a class="active" href="https://auracles.github.io">Spawn</a>
+  <a href="https://nerdculture.de/@aura">Updates</a>
+  <a href="mailto:auracles.contact@proton.me">Contact</a>
+</div>
+
 </body>
+
 </html>
