interface and style
- changed background color and purple
- added "blog" section (html, css)
- added introduction post: added second font (helvetica)

--- a/index.html
+++ b/index.html
@@ -1,26 +1,74 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
+
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>this is a webpage.</title>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Hier werden die Styles geladen -->
-   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.css">
 </head>
+
 
 <body>
 
-    <h2>> Willkommen</h2>
+<div clas="head">
 
-<!-- <h4>  <i>Auf dieser Seite teile ich meine Projekte.</i>  </h4> -->
+  <h2>> Willkommen</h2>
 
-<div class="topnav">
-  <a class="active" href="https://auracles.github.io">Spawn</a>
-  <a href="https://nerdculture.de/@aura">Updates</a>
-  <a href="mailto:auracles.contact@proton.me">Contact</a>
+  <div class="topnav">
+    <a class="active" href="https://auracles.github.io">Spawn</a>
+    <a href="https://nerdculture.de/@aura">Updates</a>
+    <a href="mailto:auracles.contact@proton.me">Contact</a>
+    <a> | </a>
+    <a href="#blog">Blog</a>
+  </div>
+
+</div>  
+
+
+<div class="writing">
+
+  <h3 id="blog">Blog</h3>
+
+  <dl>
+    <dt>Entries in 2022</dt>
+      <dd> <a href="#be01" style="text-decoration:none">- Hello, world.</a> </dd>
+  </dl>
+
 </div>
+
+
+<!-- BLOG ARTICLES -->
+
+<div>
+  <article class="blog-entry", id="be01">
+    <h3>Hello, world.</h3>
+    <h5>by <i>auracles</i> on 28. July 2022</h5>
+    <h3></h3>
+    <p>
+     <i>*spawns*</i> <br> <br>
+      Hey! <br>
+      Seems like this is my corner on this awesome web, now. <br>
+      I am happy to be here! Nice to meet you. :) <br>
+      I'm aura, short for auracles. <br>
+
+      <br>
+
+      I create/d this page to share my thoughts and projects and other things that come to my mind. <br>
+      The topics written about in my blog entries might vary from history, politics, technology, art and activism to travel blog posts if I get the chance to do so. Also, I like clouds. <br>
+      In case you have questions or want to talk or discuss about an upload please contact me <a href="mailto:auracles.contact@proton.me">here</a> or click on the link that says 'Contact' above. <br>
+      
+      <br>
+
+      That's it about me so far, I am exited to be on this journey - oh, and please expect this website to change in content and style sometimes. <br>
+      Hope to see you around! aura <br>
+      <br>
+      <i>Note: it is likely that not every post will be in English. Just a little heads up.</i>
+    </p>
+  </article>
+</div>
+
 
 </body>
 
