colors and footer
- all colors are now stated in hexadecimal
- change of background. navigation bar, blog post colors
- added a footer with contact info

--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
 
 <body>
 
-<div clas="head">
+  <div clas="head">
 
-  <h2>> Willkommen</h2>
-
-  <div class="topnav">
-    <a class="active" href="https://auracles.github.io">Spawn</a>
-    <a href="https://nerdculture.de/@aura">Updates</a>
-    <a href="mailto:auracles.contact@proton.me">Contact</a>
-    <a> | </a>
-    <a href="#blog">Blog</a>
-  </div>
-
-</div>  
+    <h2>> Willkommen</h2>
+  
+    <div class="topnav">
+      <a class="active" href="https://auracles.github.io">Spawn</a>
+      <a href="#contact">Contact</a>
+      <a> | </a>
+      <a href="#blog">Blog</a>
+    </div>
+  
+  </div>  
 
 
 <div class="writing">
@@ -68,6 +67,17 @@
     </p>
   </article>
 </div>
+
+
+<footer>
+
+  <div class="contact">
+    <a id="contact">Contact:</a>  
+    <a href="mailto:auracles.contact@proton.me">Mail</a>
+    <a href="https://chaos.social/@aura">Social</a>
+  </div>
+
+</footer>
 
 
 </body>
