typos in css and photo gallery
- corrected typos in style sheet that led to complications
-added photo gallery

not: hover feature in photo gallery works only with cursor

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <div clas="head">
+  <div class="head">
 
     <h2>> Willkommen</h2>
   
@@ -21,25 +21,41 @@
       <a href="#contact">Contact</a>
       <a> | </a>
       <a href="#blog">Blog</a>
+      <a href="#gallery">Gallery</a>
     </div>
   
-  </div>  
+  </div> 
 
-
-<div class="writing">
 
   <h3 id="blog">Blog</h3>
 
-  <dl>
-    <dt>Entries in 2022</dt>
-      <dd> <a href="#be01" style="text-decoration:none">- Hello, world.</a> </dd>
-  </dl>
+  <div class="writing">
+  
+    <dl>
+      <dt>Entries in 2022</dt>
+        <dd> <a href="#be01" style="text-decoration:none">- Hello, world.</a> </dd>
+        <dd></dd>
+    </dl>
+  
+  </div>
+
+
+<!-- GALLERY -->
+<h3 id="gallery">Photo Gallery</h3>
+
+<div class="gallery-items">
+
+  <div class="container">
+    <img src="https://github.com/auracles/auracles.github.io/blob/auracles-img-test/sky.jpg?raw=true">
+    <div class="middle">
+      <div class="text">June 11, 2022</div>
+    </div>
+  </div>
 
 </div>
 
 
 <!-- BLOG ARTICLES -->
-
 <div>
   <article class="blog-entry", id="be01">
     <h3>Hello, world.</h3>
