--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
     </div>
   </div>
 
+  <div class="container">
+    <div class="middle">
+      <div class="text">August 09, 2022</div>
+    </div>
+  </div>
+
 </div>
 
 
