--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   </div>
 
   <div class="container">
+    <img src="https://github.com/auracles/auracles.github.io/blob/auracles-img-test/clouds.jpeg?raw=true">
     <div class="middle">
       <div class="text">August 09, 2022</div>
     </div>
