photo gallery update
change to image sources (links), one image added to gallery

--- a/index.html
+++ b/index.html
@@ -46,16 +46,23 @@
 <div class="gallery-items">
 
   <div class="container">
-    <img src="https://github.com/auracles/auracles.github.io/blob/auracles-img-test/sky.jpg?raw=true">
+    <img src="https://pixelfed.eu/storage/m/_v2/469953463305949756/95653d066-30298e/rXlyCWPdOKGl/mmcrzlLpCB4Md5rYhVipwHXZHxywc4CdA9NPMWS4.jpg">
     <div class="middle">
       <div class="text">June 11, 2022</div>
     </div>
   </div>
 
   <div class="container">
-    <img src="https://github.com/auracles/auracles.github.io/blob/auracles-img-test/clouds.jpeg?raw=true">
+    <img src="https://pixelfed.eu/storage/m/_v2/469953463305949756/95653d066-30298e/KzSmqHnfLS8b/vkVrc4YGqxTDXsOkkIOSrP2LhW65YVQY0tUtOshH.jpg">
     <div class="middle">
       <div class="text">August 09, 2022</div>
+    </div>
+  </div>
+
+  <div class="container">
+    <img src="https://pixelfed.eu/storage/m/_v2/469953463305949756/95653d066-30298e/3cogoJtOipQT/O0VdRsSX5rRSo1LVeOSIeki7WUhVJYT75ITH0h4o.jpg">
+    <div class="middle">
+      <div class="text">August 27, 2022</div>
     </div>
   </div>
 
