--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
       <div class="text">August 27, 2022</div>
     </div>
   </div>
+  
+  <div class="container">
+    <img src="https://pixelfed.eu/storage/m/_v2/469953463305949756/95653d066-30298e/gIVDXb3EolIX/6cza09lpTX66b9tqR3Y9NjJ1JrUyBQi9XLTvDABQ.jpg">
+    <div class="middle">
+      <div class="text">September 17, 2022</div>
+    </div>
+  </div>
 
 </div>
 
