update photo gallery
added a photo to the gallery

--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
       <div class="text">September 17, 2022</div>
     </div>
   </div>
+  
+  <div class="container">
+    <img src="https://pixelfed.eu/storage/m/_v2/469953463305949756/95653d066-30298e/DsPb8E6RdBdh/5HiT5JLT6cee11jNB0MqoEWpUjbNT9hEoQv5A9ci.jpg">
+    <div class="middle">
+      <div class="text">September 24, 2022</div>
+    </div>
+  </div>
 
 </div>
 
