--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>this is a webpage.</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="newBlog.css">
 </head>
 
 
@@ -21,7 +21,6 @@
       <a href="#contact">Contact</a>
       <a> | </a>
       <a href="#blog">Blog</a>
-      <a href="#gallery">Gallery</a>
     </div>
   
   </div> 
@@ -40,49 +39,6 @@
   </div>
 
 
-<!-- GALLERY -->
-<h3 id="gallery">Photo Gallery</h3>
-
-<div class="gallery-items">
-
-  <div class="container">
-    <img src="https://pixelfed.eu/storage/m/_v2/469953463305949756/95653d066-30298e/rXlyCWPdOKGl/mmcrzlLpCB4Md5rYhVipwHXZHxywc4CdA9NPMWS4.jpg">
-    <div class="middle">
-      <div class="text">June 11, 2022</div>
-    </div>
-  </div>
-
-  <div class="container">
-    <img src="https://pixelfed.eu/storage/m/_v2/469953463305949756/95653d066-30298e/KzSmqHnfLS8b/vkVrc4YGqxTDXsOkkIOSrP2LhW65YVQY0tUtOshH.jpg">
-    <div class="middle">
-      <div class="text">August 09, 2022</div>
-    </div>
-  </div>
-
-  <div class="container">
-    <img src="https://pixelfed.eu/storage/m/_v2/469953463305949756/95653d066-30298e/3cogoJtOipQT/O0VdRsSX5rRSo1LVeOSIeki7WUhVJYT75ITH0h4o.jpg">
-    <div class="middle">
-      <div class="text">August 27, 2022</div>
-    </div>
-  </div>
-  
-  <div class="container">
-    <img src="https://pixelfed.eu/storage/m/_v2/469953463305949756/95653d066-30298e/gIVDXb3EolIX/6cza09lpTX66b9tqR3Y9NjJ1JrUyBQi9XLTvDABQ.jpg">
-    <div class="middle">
-      <div class="text">September 17, 2022</div>
-    </div>
-  </div>
-  
-  <div class="container">
-    <img src="https://pixelfed.eu/storage/m/_v2/469953463305949756/95653d066-30298e/DsPb8E6RdBdh/5HiT5JLT6cee11jNB0MqoEWpUjbNT9hEoQv5A9ci.jpg">
-    <div class="middle">
-      <div class="text">September 24, 2022</div>
-    </div>
-  </div>
-
-</div>
-
-
 <!-- BLOG ARTICLES -->
 <div>
   <article class="blog-entry", id="be01">
@@ -94,20 +50,22 @@
       Hey! <br>
       Seems like this is my corner on this awesome web, now. <br>
       I am happy to be here! Nice to meet you. :) <br>
-      I'm aura, short for auracles. <br>
+      I'm aura, short for auracles (which is the nick I go by if aura is already taken). <br>
 
       <br>
 
-      I create/d this page to share my thoughts and projects and other things that come to my mind. <br>
-      The topics written about in my blog entries might vary from history, politics, technology, art and activism to travel blog posts if I get the chance to do so. Also, I like clouds. <br>
-      In case you have questions or want to talk or discuss about an upload please contact me <a href="mailto:auracles.contact@proton.me">here</a> or click on the link that says 'Contact' above. <br>
+      I create/d this page to share my thoughts and projects. <br>
+      The topics might differ because I am a curious person. For now, my key topics are history, politics, technology, art and activism. <br>
+      In case you have questions or want to talk or discuss about any upload, please contact me <a href="mailto:auracles.contact@proton.me">here</a> <br>
       
       <br>
 
       That's it about me so far, I am exited to be on this journey - oh, and please expect this website to change in content and style sometimes. <br>
-      Hope to see you around! aura <br>
+      Hope to see you around! <br>
+      ~aura <br>
       <br>
       <i>Note: it is likely that not every post will be in English. Just a little heads up.</i>
+
     </p>
   </article>
 </div>
@@ -116,10 +74,14 @@
 <footer>
 
   <div class="contact">
-    <a id="contact">Contact:</a>  
+    <a id="contact"></a>  
     <a href="mailto:auracles.contact@proton.me">Mail</a>
-    <a href="https://chaos.social/@aura">Social</a>
+    <a href="https://chaos.social/@aura">Mastodon</a>
+    <a href="https://pixelfed.eu/@aura">Pixelfed</a>
+
   </div>
+  
+  
 
 </footer>
 
