--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>this is a webpage.</title>
-  <link rel="stylesheet" href="newBlog.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 
 
