added blog article

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <dl>
       <dt>Entries in 2022</dt>
         <dd> <a href="#be01" style="text-decoration:none">- Hello, world.</a> </dd>
-        <dd></dd>
+        <dd> <a href="#be02" style="text-decoration:none">- Freedom Not Fear 2022</a> </dd>
     </dl>
   
   </div>
 
 
-<!-- BLOG ARTICLES -->
+<!-- BLOG ARTICLE 1 -->
 <div>
   <article class="blog-entry", id="be01">
     <h3>Hello, world.</h3>
@@ -66,6 +66,36 @@
       <br>
       <i>Note: it is likely that not every post will be in English. Just a little heads up.</i>
 
+    </p>
+  </article>
+</div>
+
+
+<!-- BLOG ARTICLE 2 -->
+<div>
+  <article class="blog-entry", id="be02">
+    <h3>Freedom Not Fear 2022</h3>
+    <h5>by <i>auracles</i> on 23. December 2022 (originally written on: 3./4. September 2022) </h5>
+    <p>
+     
+      Freedom not Fear took place from the 2nd to 5th September 2022 in Brussels. Except for the previous two years (due to COVID) the conference is an annual event attended by around 150 organisations, policy makers, lawyers and activists. They meet to discuss topics such as data protection, digital rights, surveillance, freedom of speech and censorship. While a shared focus lies on European netpolitics. <br>
+      For this year, an approximate of 80 people visited Brussels, 65 of them joined the visit of the European Parliament on Monday (5th September). There the attendees were given the opportunity to talk to two Members of Parliament; Cornelia Ernst and Patrick Breyer.
+      The attendees traveled from all over Europe, some from Portugal, others from Greece, to share their knowledge and learn together. We even saw guests from Japan and the United States. <br>
+      <br>
+      This year’s political focus was pointed at the “Proposal for a Regulation of the European Parliament and of the Council laying down rules to prevent and combat child sexual abuse”. Among fnf attendees this proposal by the European Commission is known as “Chatcontrol”. It is seen as a controversy and danger to the European right to privacy which is a core value and fundamental law within the European Union. <br>
+      Furthermore, the tech bubble, present at the conference, agrees that it’s impossible to maintain a permanent technical solution to this serious issue (child sexual abuse) for it is far more complex as if it could be solved with a simple fix. <br>
+      Concerning privacy itself, it is manifested in the Charta of the European Union, in the Articles 7 and 8. The 8th Article states the right to protection of personal data and therefore acknowledges the importance of data protection in our digital and interconnected world. Privacy in general is the right to seclude oneself or information about oneself from an individual or group. <br>
+      <br>
+      On the weekend, the attendees profited from listening  to presentations, participating in workshops, or spontaneously create one of their own.
+      Civil society organisations like the Chaos Computer Club and Digitalcourage were actively networking and sharing their expertise at the conference, as well as meeting with friends and colleagues. <br>
+      <br>
+      Lastly, here is a great thanks to the organisation team for making Freedom not Fear  conference post-COVID possible! The fact that attendees could become eligible for travel reimbursements certainly made it possible for many to join. The entry ticket was at a 50 Euros and the website provided helpful information on hotels, restaurants and bars in the area. Despite the fact that the conference relies on donations, there was food and drinks available for everyone. <br>
+      Every person, disregarding of age, gender and background was welcome to join the weekend. 
+      It has been a great delight to work together with so many people, to discuss and to share perspectives on the topics mentioned above. 
+      Cultural insights made discussions an enriching experience and demonstrated that all of us are united in diversity. <br>
+      <br>
+      Sources: <a href="https://freedomnotfear.org/2022"> freedomnotfear.org </a>
+      
     </p>
   </article>
 </div>
