--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <p>
      
       Freedom not Fear took place from the 2nd to 5th September 2022 in Brussels. Except for the previous two years (due to COVID) the conference is an annual event attended by around 150 organisations, policy makers, lawyers and activists. They meet to discuss topics such as data protection, digital rights, surveillance, freedom of speech and censorship. While a shared focus lies on European netpolitics. <br>
-      For this year, an approximate of 80 people visited Brussels, 65 of them joined the visit of the European Parliament on Monday (5th September). There the attendees were given the opportunity to talk to two Members of Parliament; Cornelia Ernst and Patrick Breyer.
+      For this year, more than 100 people visited Brussels, 65 of them joined the visit of the European Parliament on Monday (5th September). There the attendees were given the opportunity to talk to two Members of Parliament; Cornelia Ernst and Patrick Breyer.
       The attendees traveled from all over Europe, some from Portugal, others from Greece, to share their knowledge and learn together. We even saw guests from Japan and the United States. <br>
       <br>
       This year’s political focus was pointed at the “Proposal for a Regulation of the European Parliament and of the Council laying down rules to prevent and combat child sexual abuse”. Among fnf attendees this proposal by the European Commission is known as “Chatcontrol”. It is seen as a controversy and danger to the European right to privacy which is a core value and fundamental law within the European Union. <br>
