--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <div class="contact">
     <a id="contact"></a>  
-    <a href="mailto:auracles.contact@proton.me">Mail</a>
+    <a href="mailto:auradotcontact@proton.me">Mail</a>
     <a href="https://chaos.social/@aura">Mastodon</a>
     <a href="https://pixelfed.eu/@aura">Pixelfed</a>
 
