added blog article

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <dt>Entries in 2022</dt>
         <dd> <a href="#be01" style="text-decoration:none">- Hello, world.</a> </dd>
         <dd> <a href="#be02" style="text-decoration:none">- Freedom Not Fear 2022</a> </dd>
+      <dt>Entries is 2024</dt>
+        <dd> <a href="#be03" style="text-decoration:none"> -Privacy Camp 2024</dd>
     </dl>
   
   </div>
@@ -43,14 +45,14 @@
 <div>
   <article class="blog-entry", id="be01">
     <h3>Hello, world.</h3>
-    <h5>by <i>auracles</i> on 28. July 2022</h5>
+    <h5>by <i>aura</i> on 28. July 2022</h5>
     <h3></h3>
     <p>
      <i>*spawns*</i> <br> <br>
       Hey! <br>
       Seems like this is my corner on this awesome web, now. <br>
       I am happy to be here! Nice to meet you. :) <br>
-      I'm aura, short for auracles (which is the nick I go by if aura is already taken). <br>
+      I'm aura, sometimes auracles (which is the nick I go by if aura is already taken). <br>
 
       <br>
 
@@ -75,7 +77,7 @@
 <div>
   <article class="blog-entry", id="be02">
     <h3>Freedom Not Fear 2022</h3>
-    <h5>by <i>auracles</i> on 23. December 2022 (originally written on: 3./4. September 2022) </h5>
+    <h5>by <i>aura</i> on 23. December 2022 (originally written on: 3./4. September 2022) </h5>
     <p>
      
       Freedom not Fear took place from the 2nd to 5th September 2022 in Brussels. Except for the previous two years (due to COVID) the conference is an annual event attended by around 150 organisations, policy makers, lawyers and activists. They meet to discuss topics such as data protection, digital rights, surveillance, freedom of speech and censorship. While a shared focus lies on European netpolitics. <br>
@@ -96,6 +98,56 @@
       <br>
       Sources: <a href="https://freedomnotfear.org/2022"> freedomnotfear.org </a>
       
+    </p>
+  </article>
+</div>
+
+  
+<!-- BLOG ARTICLE 3 -->
+<div>
+  <article class="blog-entry", id="be03">
+    <h3>Privacy Camp 2024</h3>
+    <h5>von <i>aura</i> am 1. Mai 2024 (ursprünglich geschrieben am: 24. Januar 2024) </h5>
+    <p>
+      Am Mittwoch, den 24. Januar fand in Brüssel das jährlich von EDRi und politischen sowie zivilgesellschatlichen Unterstützern organiserte Privacy  Camp statt. Unter dem dem Motto “Revealing, rethinking and changing systems” wurden 12 Vorträge, Paneldiskussionen und Workshops über den Tag verteilt angeboten.
+
+      Der EDPS Summit ist ein wiederkehrendes Modell, bei dem sich der European Data Protection Supervisor und sein Team in den direkten Austausch mit der Zivilgesellschaft begeben. Dieses Jahr stand das Treffen nicht nur im Kontext der später im Jahr folgenden Europaparlamentswahl, sondern auch dem 20. Geburtstag der Kontrollbehörde.
+      So kündigte Thomas Zerdick, der Head of Unit (EDPS) beispielsweise eine bevorstehende Prüfung der Nutzung von Microsoft 365 bei der Europäischen Kommission an. Das Ergebnis dieser Untersuchung wird unweigerlich Konsequenzen für alle anderen Institutionen der EU bedeuten.
+      Ein weiteres Thema waren der Einfluss und die Auswirkungen von künstlicher Intelligenz (KI) auf die nun kommende Wahlperiode. Auf die Frage der Moderatorin Ella Jakubowska, Senior Policy Officer bei EDRi, was sich die Teilnehmenden hinsichtlich Datenschutz wünschen würden, war die Antwort, wenn auch mit einem sarkastischen Unterton, dass es schön wäre, wenn es eine Art Dashboard pro Service pro User gäbe, wo jeder einfach alle sie:ihn betreffende Daten ansehen und gegebenfalls löschen könnten. 
+      Es wurde darauf verwiesen, dass KI diese Sucharbeit vereinfachen könnte. 
+      In einer anderen Diskussion wurde im Kontext des Krieges in der Ukraine die Nutzung von Clearview AI zu Identifizierung von Personen besprochen. Nach Europäischen Datenschutzrecht, darunter auch die Regelungen des GDPR wäre eine offizielle Nutzung zwar nicht möglich, was das Unternehmen allerdings nicht daran gehindert hatte es bei einiegen Polizeikonferenzen als attraktives Werkzeug zu vermarkten. 
+      Corsight AI, wurde ebenfalls kurz erwähnt, da das Unternehmen für sich beansprucht, selbst maskierte Menschen mit hoher Erfolgsquote identifizieren zu können. 
+      Die Vortragenden kamen schließlich auf das Prinzip der Zweckbindung von Technologien zu sprechen. Dies sei erforderlich, um zu gewährleisten, dass Technologien keinen massiven Kollateralschaden beispielsweise in Form von Diskriminierung oder Databreaches erzeugen können.
+      In einer Diskussion zu sogenannten “Privacy enhancing technologies” (PETs) wurde dieses Prinzip dem, der Datensparsamkeit gegenübergestellt. Allerdings im Kontext Technologiekonzerngiganten, die die Privatsphäre ihrer Nutzer zugunsten der wirtschaftlichen Abhängigkeitserschaffung von Herstellern und Entwicklern in ein Produkt umgestalten. 
+
+      Dies wurde in der Session an einem Beispiel verdeutlicht, in dem besagte Unternehmen zunehmend relevanten Infrastrukturen für sowohl den Endnutzenden als auch den Herstellenden produzieren.
+      Angenommen ein Mensch will wissen, ob sich in ihrem:seinem analogen Briefkasten Post befindet. Dann kann dieser Briefkasten als Endpoint gelten, sofern et mit einem Gateway, zum Beipsiel einem Amazon Echo oder Ring verbunden ist, das wiederum die Information, ob sich Post im Briekasten befindet oder nicht, verschlüsselt in Amazons Cloud stellt. Die Infromation in Amazons Cloud wird letztendlich weiter an den Server des Herstellenden übergeben, zum Beispiel einer App. Somit ist der Hersteller oder Entwickler abhängig von der Kompabilität seiner Dienste mit denen von Amazon. Abhängig aber auch nur, weil Amazon bereits die Daten verchlüsselt und es teurer wäre sich (als Hersteller/Entwickler) ein eigenes Modell zu bauen. Amazon schafft somit künstlich Infrastruktur, die der Konsument haben möchte. Das Bedürfnis nach Privatsphäre wird von Amazon aufgegriffen und in ein Produkt umgewandelt, das Entwicklende wiederum in Anspruch nehmen, um vorerst nicht vom Markt zu verschwinden.
+
+      Im Talk werden auch Google’s Privacy Sandbox und die Exposure Notifications von Google und Apple aufgefasst und als Beispiele für die Produktifizierung von Privatsphäre verwendet.
+      Aus dem Publikum stellte sich zunehmend die Frage, was man tun könne, um die Privatsphäre der Endnutzer nicht als wichtiges Thema aus den Augen zu verlieren. Die Antwort darauf war: das Problem ist mittlerweile komplexer als dass die Frage nach ausschließlich der Privatsspähre ausreicht. Man könnte sich stattdessen fragen, infwiefern derartige Technologien zum Erhalt der Demokratien beitragen (oder auch nicht). Und das, während, oder besser bevor man sie baut.
+      Inwiefern trägt Amazons (Smarthome) Infrastruktur zum Erhalt oder Ausbau einer Demokratie bei?
+
+      Falls die Antwort negativ ausfällt, kann man weitergehen und überlegen, ob eine einzige Zweckbindung für eine Technologie förderlicher wäre.
+      Ein erfolgreiches Beispiel sind die hierfür von Google und Apple auf Betriebssystemlevel ausgelegte Technolgie Exposure Notifications. 
+      Sie hatte den Zweck den Smartphonebsitzer über mögliche COVID Kontaktpresonen in ihrer:seiner Nähe aufzuklären. Die Technologie hätte sinngemäß aber ebenso zum Monitoren von Kontaktnetzwerken (auch während der Pandemie) missbraucht werden können. 
+      Allerdings wurde sie nach der Hochphase der Pandemie wieder eingestellt und die Möglichkeit Änderungen nachzureichen genommen. Folglich erkennt man in diesem spezifischen Fall also einen vergleichbar verantwortlichen Umgang mit dieser in anderen Kontexten bedenklichen Technologie.
+      Da Exposure Notifications im Kontext der Pandemie entstanden sind und genutzt wurden, ist die Frage der Nachhaltigkeit auch gewissermaßen geklärt, selbst wenn das Ergebnis unbefriedigend scheint, ist es doch positiv, dass durch die Zweckbindung auch die Möglichkeit zur Zweckentfremdung erheblich gesenkt worden ist. Jedefalls in dieser Implementation.
+
+      Missbrauch beziehungsweise die missbräuchliche Erweiterung ursprünglich legitimer Technologien war ebenfalls ein (weiteres) Panelthema. Hier im Hinblick auf (Im)Migration in Europa. 
+      Es wurde über die Etablierung von GPS Tracking im Vereinigten Königreich (UK) gesprochen:
+      Die Verpflichtung einer GPS-trackingfähigen Fußschelle entstammt dem Strafrecht. Es galt als “humane” Alternative zur Freiheitsstrafe und war üblich bei Bewährungsstrafen.
+      Seitdem sich Verstöße gegen Auflagen des Flüchltlings- und Asylrechts weg vom Verwaltungsrecht hin zum Strafrecht entwickelt haben, haben sicht auch die Strafen mitangepasst. 
+      Sogenannte “foreign national offenders” werden per trackingfähriger Fußsschelle überwacht. 
+      Dabei werden einem Versuch von Privacy International zufolge, in der Diskussion vertreten von Lucie Audibert pro Woche Datenmengen in der Größenprdnung von ca. 600 Excel Spreadsheets produziert.
+      Das nur, weil alle 30 Sekunden ein aktueller Stand erfragt wird. Dem Versuch der Organisation zufolge sind die Intervalle der Standortabfragen aber auch beispielsweise auf täglich oder wöchentlich einstellbar.
+
+      Der Tag war schlussendlich vom gewählten Motto strukturiert.
+      Es gab Aufklärung und Austausch über bestehende Systeme und Technologien. Möglichketiten zum Gedankenaustausch und gemeinsamen Weiterdenken bishin zum Lösungsschmieden. 
+      Der letzte Aspekt (changing systems) scheint auch zu passieren. Dafür spricht die Tatsach eines gut besuchten Privacy Camps; Personen aus der EU interessieren sich für digitale Rechte und die dahinterliegenden Technologien und Abläufe. 
+      Jetzt bleibt sich erstmal an den bevorstehenden Wahlen zu beteiligen und sich weiterhin aktiv einzubringen.
+      <br>
+      Sources: <a href="https://privacycamp.eu/"> privacycamp.eu </a>
+
     </p>
   </article>
 </div>
