blog entry changes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <dd> <a href="#be01" style="text-decoration:none">- Hello, world.</a> </dd>
         <dd> <a href="#be02" style="text-decoration:none">- Freedom Not Fear 2022</a> </dd>
       <dt>Entries is 2024</dt>
-        <dd> <a href="#be" style="text-decoration:none"> -Privacy Camp 2024</dd>
+        <dd> <a href="#be03" style="text-decoration:none">-Privacy Camp 2024</dd>
     </dl>
   
   </div>
@@ -96,7 +96,7 @@
       It has been a great delight to work together with so many people, to discuss and to share perspectives on the topics mentioned above. 
       Cultural insights made discussions an enriching experience and demonstrated that all of us are united in diversity. <br>
       <br>
-      Sources: <a href="https://freedomnotfear.org/2022"> freedomnotfear.org </a>
+      Source: <a href="https://freedomnotfear.org/2022"> freedomnotfear.org </a>
       
     </p>
   </article>
@@ -105,7 +105,7 @@
   
 <!-- BLOG ARTICLE 3 -->
 <div>
-  <article class="blog-entry", id="be">
+  <article class="blog-entry", id="be03">
     <h3>Privacy Camp 2024</h3>
     <h5>von <i>aura</i> am 1. Mai 2024 (ursprünglich geschrieben am: 24. Januar 2024) </h5>
     <p>
@@ -146,7 +146,7 @@
       Der letzte Aspekt (changing systems) scheint auch zu passieren. Dafür spricht die Tatsach eines gut besuchten Privacy Camps; Personen aus der EU interessieren sich für digitale Rechte und die dahinterliegenden Technologien und Abläufe. 
       Jetzt bleibt sich erstmal an den bevorstehenden Wahlen zu beteiligen und sich weiterhin aktiv einzubringen.
       <br> <br>
-      Sources: <a href="https://privacycamp.eu/"> privacycamp.eu </a>
+      Source: <a href="https://privacycamp.eu/"> privacycamp.eu </a>
 
     </p>
   </article>
