--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <dd> <a href="#be01" style="text-decoration:none">- Hello, world.</a> </dd>
         <dd> <a href="#be02" style="text-decoration:none">- Freedom Not Fear 2022</a> </dd>
       <dt>Entries is 2024</dt>
-        <dd> <a href="#be03" style="text-decoration:none">-Privacy Camp 2024</dd>
+        <dd> <a href="#be03" style="text-decoration:none">-Privacy Camp 2024</a> </dd>
     </dl>
   
   </div>
